# SIN-Code-Codocs-Skill

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
examples/bad/: legacy.py
examples/good/: auth.doc.md  auth.py
scripts/: auto-fill-doc-md.sh  auto-fill-doc-md.sh.doc.md  check.sh  coverage.sh  diff.sh  generate.sh  init.sh  install-skill.sh  new-doc-md.sh  new-module.sh  scan.sh  sprint.sh  status.sh
src/sin_codocs/: __init__.py  audit_inline.doc.md  audit_inline.py  auto_fill_doc_md.doc.md  auto_fill_doc_md.py  cli.py  doc_md_template.md  generator.doc.md  generator.py  metrics.doc.md  metrics.py  repair_codocs.doc.md  repair_codocs.py  reporter.doc.md  reporter.py  scanner.doc.md  scanner.py  sprint_metrics.doc.md  sprint_metrics.py  template.doc.md  template.py
src/templates/: draft_template.md
templates/: inline-header.md  inline_template.md  module.doc.md.template  module.go.template  module.py.template  sprint_checklist.md
tests/: test_generator.py  test_init.py  test_metrics.py  test_reporter.py  test_scanner.py  test_scripts.py  test_sprint_metrics.py
